# xp-fee-calculator

./: DEVELOPMENT.md  UI设计师.md  main.py  pyproject.toml  setup_data.py  开发文档.md  新品铺货费计算器.md
.streamlit/: config.toml
config/: coefficients.xlsx  coefficients.yaml  users.json
data/: batch_template.xlsx  dim_metadata.json  store_master.xlsx  处方类别与批文分类表.xlsx
docs/: linux_deploy_guide.md  新品铺货费计算器_系统逻辑与维护手册.md
src/: main.py  sync_db_to_exel.py
src/core/: auth.py  calculator.py  config_loader.py  file_utils.py  store_manager.py
src/scripts/: convert_yaml_to_excel.py
src/ui/: app.py  user_management.py  users.json
tests/: test_calculator.py
